methods.slug.SlugHunting.scala.error
Erreur de compilation :
SlugHunting:3: error: reassignment to val
  while (estSurBiscuit=false){
                      ^